--- a/BasicCalculatorUnitTesting/Base.lproj/Main.storyboard
+++ b/BasicCalculatorUnitTesting/Base.lproj/Main.storyboard
@@ -1,24 +1,152 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="BasicCalculatorUnitTesting" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="34" translatesAutoresizingMaskIntoConstraints="NO" id="jRG-iC-X5D" userLabel="MainAppStack">
+                                <rect key="frame" x="37" y="173.5" width="340" height="549.5"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="CvV-Bf-sCT" userLabel="AppNameStack">
+                                        <rect key="frame" x="60" y="0.0" width="220.5" height="35"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Basic Calculator" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fc1-hr-9H1">
+                                                <rect key="frame" x="0.0" y="0.0" width="220.5" height="35"/>
+                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="29"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="Y7M-tJ-FGs" userLabel="InputStack">
+                                        <rect key="frame" x="10" y="69" width="320" height="83"/>
+                                        <subviews>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter First Number" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2mL-aM-vzl">
+                                                <rect key="frame" x="0.0" y="0.0" width="320" height="34"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Second Number" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wa0-wx-XIj">
+                                                <rect key="frame" x="0.0" y="49" width="320" height="34"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="vWO-iG-CH1" userLabel="OperatorStack">
+                                        <rect key="frame" x="10" y="186" width="320" height="216"/>
+                                        <subviews>
+                                            <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dBm-dt-GAc">
+                                                <rect key="frame" x="0.0" y="0.0" width="320" height="216"/>
+                                            </pickerView>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="top" spacing="34" translatesAutoresizingMaskIntoConstraints="NO" id="AU8-na-WhR" userLabel="ButtonResultStack">
+                                        <rect key="frame" x="10" y="436" width="320" height="41"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nYs-lN-Pry">
+                                                <rect key="frame" x="0.0" y="0.0" width="320" height="41"/>
+                                                <color key="backgroundColor" name="AccentColor"/>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="plain" title="Calculate">
+                                                    <fontDescription key="titleFontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="23"/>
+                                                    <color key="baseForegroundColor" systemColor="systemBackgroundColor"/>
+                                                </buttonConfiguration>
+                                                <connections>
+                                                    <action selector="btn_calculate:" destination="BYZ-38-t0r" eventType="touchUpInside" id="aSH-47-kir"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="nYs-lN-Pry" secondAttribute="trailing" id="9nt-6o-zUE"/>
+                                            <constraint firstAttribute="bottom" secondItem="nYs-lN-Pry" secondAttribute="bottom" id="Rei-XQ-xmu"/>
+                                            <constraint firstItem="nYs-lN-Pry" firstAttribute="top" secondItem="AU8-na-WhR" secondAttribute="top" id="c3y-sx-6vK"/>
+                                            <constraint firstItem="nYs-lN-Pry" firstAttribute="leading" secondItem="AU8-na-WhR" secondAttribute="leading" id="qvF-I9-6zF"/>
+                                        </constraints>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="wA2-ls-Hja" userLabel="ResultStack">
+                                        <rect key="frame" x="127" y="511" width="86" height="38.5"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Result" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="oT3-rc-oTi">
+                                                <rect key="frame" x="0.0" y="0.0" width="86" height="38.5"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="32"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="Y7M-tJ-FGs" secondAttribute="trailing" constant="10" id="6jh-OW-YxZ"/>
+                                    <constraint firstItem="Y7M-tJ-FGs" firstAttribute="leading" secondItem="jRG-iC-X5D" secondAttribute="leading" constant="10" id="8tY-zZ-pL9"/>
+                                    <constraint firstItem="vWO-iG-CH1" firstAttribute="leading" secondItem="jRG-iC-X5D" secondAttribute="leading" constant="10" id="9RH-sx-aFh"/>
+                                    <constraint firstItem="AU8-na-WhR" firstAttribute="leading" secondItem="jRG-iC-X5D" secondAttribute="leading" constant="10" id="RJE-tE-IPd"/>
+                                    <constraint firstAttribute="trailing" secondItem="AU8-na-WhR" secondAttribute="trailing" constant="10" id="Tk0-yJ-4qz"/>
+                                    <constraint firstItem="wA2-ls-Hja" firstAttribute="centerX" secondItem="jRG-iC-X5D" secondAttribute="centerX" id="WxX-b7-oWe"/>
+                                    <constraint firstItem="vWO-iG-CH1" firstAttribute="centerX" secondItem="jRG-iC-X5D" secondAttribute="centerX" id="a4B-A5-niN"/>
+                                    <constraint firstItem="AU8-na-WhR" firstAttribute="centerX" secondItem="jRG-iC-X5D" secondAttribute="centerX" id="dX3-au-vsA"/>
+                                    <constraint firstItem="CvV-Bf-sCT" firstAttribute="centerX" secondItem="jRG-iC-X5D" secondAttribute="centerX" id="jnU-YK-ycZ"/>
+                                    <constraint firstItem="Y7M-tJ-FGs" firstAttribute="centerX" secondItem="jRG-iC-X5D" secondAttribute="centerX" id="nXb-i6-h4a"/>
+                                    <constraint firstAttribute="trailing" secondItem="vWO-iG-CH1" secondAttribute="trailing" constant="10" id="woF-Hf-5zb"/>
+                                </constraints>
+                            </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Xzg-D1-B7x">
+                                <rect key="frame" x="17" y="796" width="380" height="100"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="This is a demo calculator application to demonstrate Unit Testing" textAlignment="center" lineBreakMode="clip" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="4Et-WB-xQ0">
+                                        <rect key="frame" x="0.0" y="0.0" width="380" height="100"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Xzg-D1-B7x" secondAttribute="trailing" constant="17" id="3Ol-We-0xR"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="jRG-iC-X5D" secondAttribute="trailing" constant="37" id="EaA-CM-F1S"/>
+                            <constraint firstItem="Xzg-D1-B7x" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="17" id="MCC-gn-tg8"/>
+                            <constraint firstItem="jRG-iC-X5D" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="QSg-Ox-0ZD"/>
+                            <constraint firstItem="jRG-iC-X5D" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="eLS-TV-TT4"/>
+                            <constraint firstAttribute="bottom" secondItem="Xzg-D1-B7x" secondAttribute="bottom" id="jZV-fa-mqb"/>
+                            <constraint firstItem="jRG-iC-X5D" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="37" id="mxl-1Q-Mzw"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="OperatorPicker" destination="dBm-dt-GAc" id="1ve-Sn-Iaj"/>
+                        <outlet property="lbl_results" destination="oT3-rc-oTi" id="mOh-r8-Izr"/>
+                        <outlet property="txt_value1" destination="2mL-aM-vzl" id="7jr-YF-mWC"/>
+                        <outlet property="txt_value2" destination="wa0-wx-XIj" id="GEI-MU-fQO"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="34.782608695652179" y="97.767857142857139"/>
         </scene>
     </scenes>
+    <resources>
+        <namedColor name="AccentColor">
+            <color red="0.0" green="0.46000000000000002" blue="0.89000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
